2012-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): New put-byte function interned.

	* stream.c (struct strm_ops): New member, put_byte.
	(stdio_put_byte): New function.
	(stdio_ops, pipe_ops, string_in_ops, byte_in_ops,
	string_out_ops, strlist_out_ops, dir_ops): Updated.
	(put_byte): New function.

	* stream.h (put_byte): Declared.

2012-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l (num_esc): Skip octal indicator 'o' if present.
	This is needed for character constants.
	(CHRLIT): Fix broken hex constants, being treated as octal.

	* txr.1: Document octal character constants.

2012-02-25  Kaz Kylheku  <kaz@kylheku.com>

	Version 58

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.

	* eval.c (eval_init): Updated.

	* rand.c (rand): Function renamed to rnd due to a clash with
	standard C library (that does not show up when compiling as C++).

	* rand.h (rand): Declaration renamed to rnd.

2012-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l (source_loc_str): Missing function re-written.
	(Accidentally originally written in lex.yy.c file!)
	(parse_reset): If file can't be opened, try adding .txr suffix
	to it.

	* txr.1: Suffix-handling behavior documented.

2012-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (clause): "Doh" moment. We don't need the special
	transformation of the load syntax because the parent location
	is already associated with the syntax.

	* match.c (v_load): Pull out source location info from
	the form itself.

2012-02-24  Kaz Kylheku  <kaz@kylheku.com>

	* debug.c (debug): Use new way of getting line number.

	* eval.c (eval_error): Use source_loc_str to get source location.

	* match.c (debuglf, sem_err, file_err): Likewise.

	* parser.h (source_loc_str): Declared.

	* parser.l (parse_init): form_to_ln_hash must be equal based now.

	* parser.y (rl): Store new form of read-time source location info.

	* txr.1: Documented load.
